--- a/index.html
+++ b/index.html
@@ -1,22 +1,12 @@
 <!doctype html>
 <html>
-<head>
-    <title>영화 리스트</title>
+    <head>인덱스
     <meta charset="utf-8">
-</head>
-<body>
-    <h1>
-        영화 리스트
-    </h1>
-    <ol>
-        <li><a href="https://namu.wiki/w/%EB%B0%98%EC%A7%80%EC%9D%98%20%EC%A0%9C%EC%99%95%20%EC%8B%A4%EC%82%AC%EC%98%81%ED%99%94%20%EC%8B%9C%EB%A6%AC%EC%A6%88" target="_blank" title="반지의 제왕"><strong>반지의 제왕</strong></a>
-        <img src="반지의 제왕 스크린샷.jpg" width="20%"></li>
-        <li><a href="https://namu.wiki/w/%EB%AF%B8%EC%85%98%20%EC%9E%84%ED%8C%8C%EC%84%9C%EB%B8%94%20%EC%8B%9C%EB%A6%AC%EC%A6%88" target="_blank" title="미션 임파서블"><strong>미션 임파서블</strong></a>
-        <img src="미션 임파서블 스크린샷.jpg"width="20%"></li>
-        <li><a href="https://namu.wiki/w/%EC%A1%B4%20%EC%9C%85(%EC%A1%B4%20%EC%9C%85%20%EC%8B%9C%EB%A6%AC%EC%A6%88)" target="_blank" title="존 윅"><strong>존 윅</strong></a>
-        <img src="존 윅 스크린샷.jpg" width="20%"></li>
-    </ol>
-            <a href="p-2.html">다음 페이지</a><br>
-            <a href="index.html">처음으로</a> 
-</body>
+    </head>
+    <body>
+        <h1>인덱스 실험입니다</h1>
+        <a href="p-1.html">첫 장</a>
+        <a href="p-2.html">둘째 장</a>
+    </body>
+
 </html>
