--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
-    <head>인덱스
-    <meta charset="utf-8">
+    <head>
+        <title>인덱스</title>
+        <meta charset="utf-8">
     </head>
     <body>
         <h1>인덱스 실험입니다</h1>
